firmware/application/external/enhanced_drone_analyzer/build errors.txt
In file included from /havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:37:
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:332:66: error: invalid use of incomplete type 'const struct ui::external_app::enhanced_drone_analyzer::DroneAnalyzerSettings'
  332 |     explicit DroneScanner(const DroneAnalyzerSettings& config = {});
      |                                                                  ^
/havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:32:12: note: forward declaration of 'struct ui::external_app::enhanced_drone_analyzer::DroneAnalyzerSettings'
   32 |     struct DroneAnalyzerSettings;
      |            ^~~~~~~~~~~~~~~~~~~~~
In file included from /havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:37:
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:675:5: error: 'ui::external_app::enhanced_drone_analyzer::DroneDisplayController::DroneDisplayController(const ui::external_app::enhanced_drone_analyzer::DroneDisplayController&)' cannot be overloaded with 'ui::external_app::enhanced_drone_analyzer::DroneDisplayController::DroneDisplayController(const ui::external_app::enhanced_drone_analyzer::DroneDisplayController&)'
  675 |     DroneDisplayController(const DroneDisplayController&) = delete;
      |     ^~~~~~~~~~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:641:5: note: previous declaration 'ui::external_app::enhanced_drone_analyzer::DroneDisplayController::DroneDisplayController(const ui::external_app::enhanced_drone_analyzer::DroneDisplayController&)'
  641 |     DroneDisplayController(const DroneDisplayController&) = delete;
      |     ^~~~~~~~~~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:676:29: error: 'ui::external_app::enhanced_drone_analyzer::DroneDisplayController& ui::external_app::enhanced_drone_analyzer::DroneDisplayController::operator=(const ui::external_app::enhanced_drone_analyzer::DroneDisplayController&)' cannot be overloaded with 'ui::external_app::enhanced_drone_analyzer::DroneDisplayController& ui::external_app::enhanced_drone_analyzer::DroneDisplayController::operator=(const ui::external_app::enhanced_drone_analyzer::DroneDisplayController&)'
  676 |     DroneDisplayController& operator=(const DroneDisplayController&) = delete;
      |                             ^~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:642:29: note: previous declaration 'ui::external_app::enhanced_drone_analyzer::DroneDisplayController& ui::external_app::enhanced_drone_analyzer::DroneDisplayController::operator=(const ui::external_app::enhanced_drone_analyzer::DroneDisplayController&)'
  642 |     DroneDisplayController& operator=(const DroneDisplayController&) = delete;
      |                             ^~~~~~~~
cc1plus: warning: unrecognized command line option '-Wno-volatile'
make[2]: *** [firmware/application/CMakeFiles/application.elf.dir/build.make:5369: firmware/application/CMakeFiles/application.elf.dir/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:1337: firmware/application/CMakeFiles/application.elf.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
Error: Process completed with exit code 2.